--- a/oracle-driver-image/10.2.0.3.0/Dockerfile
+++ b/oracle-driver-image/10.2.0.3.0/Dockerfile
@@ -1,10 +1,11 @@
-FROM jboss-eap-7-contrib-base
+FROM scratch
 
 LABEL   maintainer="rromerom@redhat.com" \
         name="Oracle JDBC Driver" \
         version="10.2.0.3.0"
 
-COPY install.properties /extensions
+COPY install.sh oracle-driver-image/10.2.0.3.0/install.properties /extensions/
+COPY oracle-driver-image/10.2.0.3.0/modules /extensions/modules/
 
 # Download the driver into the module folder
 ADD http://central.maven.org/maven2/com/oracle/ojdbc14/10.2.0.3.0/ojdbc14-10.2.0.3.0.jar \
