--- a/db2-driver-image/Dockerfile
+++ b/db2-driver-image/Dockerfile
@@ -1,10 +1,11 @@
-FROM jboss-eap-7-contrib-base
+FROM scratch
 
 LABEL   maintainer="rromerom@redhat.com" \
         name="IBM DB2 JDBC Driver" \
         version="10.1"
 
-COPY install.properties /extensions
+COPY install.sh db2-driver-image/install.properties /extensions/
+COPY db2-driver-image/modules /extensions/modules/
 
 # Download the driver into the module folder
 ADD https://artifacts.alfresco.com/nexus/content/repositories/public/com/ibm/db2/jcc/db2jcc4/10.1/db2jcc4-10.1.jar \
