--- a/derby-driver-image/Dockerfile
+++ b/derby-driver-image/Dockerfile
@@ -9,5 +9,7 @@ COPY derby-driver-image/modules /extensions/modules/
 
 # Download the driver into the module folder
 ADD https://repo1.maven.org/maven2/org/apache/derby/derbyclient/10.12.1.1/derbyclient-10.12.1.1.jar \
-    https://repo1.maven.org/maven2/org/apache/derby/derby/10.12.1.1/derby-10.12.1.1.jar \
-    extensions/modules/system/layers/openshift/org/apache/derby/main/
+    extensions/modules/system/layers/openshift/org/apache/derby/main/derbyclient.jar
+
+ADD https://repo1.maven.org/maven2/org/apache/derby/derby/10.12.1.1/derby-10.12.1.1.jar \
+    extensions/modules/system/layers/openshift/org/apache/derby/main/derby.jar
