--- a/mariadb-driver-image/Dockerfile
+++ b/mariadb-driver-image/Dockerfile
@@ -9,4 +9,4 @@ COPY mariadb-driver-image/modules /extensions/modules/
 
 # Download the driver into the module folder
 ADD http://central.maven.org/maven2/org/mariadb/jdbc/mariadb-java-client/2.2.5/mariadb-java-client-2.2.5.jar \
-    /extensions/modules/system/layers/openshift/org/mariadb/main/
+    /extensions/modules/system/layers/openshift/org/mariadb/main/mariadb-java-client.jar
