--- a/oracle-driver-image/Dockerfile
+++ b/oracle-driver-image/Dockerfile
@@ -9,4 +9,4 @@ COPY oracle-driver-image/modules /extensions/modules/
 
 # Download the driver into the module folder
 # ADD http://central.maven.org/maven2/com/oracle/ojdbc7/12.1.0.1/ojdbc7-12.1.0.1.jar \
-#    /extensions/modules/system/layers/openshift/com/oracle/main/
+#    /extensions/modules/system/layers/openshift/com/oracle/main/ojdbc7.jar
