--- a/mssql-driver-image/Dockerfile
+++ b/mssql-driver-image/Dockerfile
@@ -9,4 +9,4 @@ COPY mssql-driver-image/modules /extensions/modules/
 
 # Download the driver into the module folder
 ADD http://clojars.org/repo/com/microsoft/sqlserver/sqljdbc4/4.0/sqljdbc4-4.0.jar \
-    /extensions/modules/system/layers/openshift/com/microsoft/main/
+    /extensions/modules/system/layers/openshift/com/microsoft/main/sqljdbc4.jar
